--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "handlebars": "^4.7.7",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.4",
+    "morgan": "^1.10.0",
     "typescript": "^4.6.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.16"
   }
 }
